db changes
new table songs, new fields, enums, migrations and code changes according to the db changes + some config fixes
